--- a/Portfolio/Site.Master
+++ b/Portfolio/Site.Master
@@ -1,43 +1,45 @@
-<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.Master.cs" Inherits="Portfolio.Site" %>
+<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.Master.cs" Inherits="PortfolioWebForms.Site.Master" %>
+
 
 <!DOCTYPE html>
 <html lang="en">
-<head runat="server">
-    <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="Content/Site.css" rel="stylesheet" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>
+        <asp:ContentPlaceHolder ID="TitleContent" runat="server">Kazi Rifat Al Muin - Portfolio</asp:ContentPlaceHolder>
+    </title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
     <form id="form1" runat="server">
-    <header class="border-bottom bg-dark text-light">
-      <nav class="navbar navbar-expand-lg navbar-dark container">
-        <a class="navbar-brand fw-bold" runat="server" href="~/Default.aspx">My Portfolio</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div id="mainNav" class="collapse navbar-collapse">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" runat="server" href="~/Default.aspx">Home</a></li>
-            <li class="nav-item"><a class="nav-link" runat="server" href="~/About.aspx">About</a></li>
-            <li class="nav-item"><a class="nav-link" runat="server" href="~/Projects.aspx">Projects</a></li>
-            <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact.aspx">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+        <header id="header">
+            <div class="navbar">
+                <h1>Hi, I am Kazi Rifat Al Muin</h1>
+                <nav aria-label="Main navigation">
+                    <ul>
+                        <li><a href="Default.aspx">Home</a></li>
+                        <li><a href="About.aspx">About Me</a></li>
+                        <li><a href="Projects.aspx">Projects</a></li>
+                        <li><a href="Contact.aspx">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <main class="container my-4">
-        <asp:ContentPlaceHolder ID="MainContent" runat="server" />
-    </main>
+        <asp:ContentPlaceHolder ID="MainContent" runat="server"></asp:ContentPlaceHolder>
 
-    <footer class="border-top py-3">
-      <div class="container text-muted small">
-        &copy; <%: DateTime.Now.Year %> Your Name
-      </div>
-    </footer>
+        <asp:ContentPlaceHolder ID="ScriptsContent" runat="server">
+            <!-- Optional: Add JavaScript or additional content here -->
+        </asp:ContentPlaceHolder>
+
+        <footer>
+            <div class="container">
+                <p>&copy; 2025 - Kazi Rifat Al Muin. All Rights Reserved.</p>
+            </div>
+        </footer>
     </form>
 </body>
 </html>
